--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ logo: "/images/HEADSHOT CCC.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Rtunjya Gujral is a Music Technology major at Columbia College Chicago. 
   <br><br>
-  This is a portfolio of projects created in C# for PROG 101 at Columbia College Chicago. 
+  This is a portfolio of programming projects built at Columbia College Chicago. 
   <br><br>
   <a href="https://www.linkedin.com/in/rtunjya-g-93406091/">View My LinkedIn Profile</a> 
   <br> 
